9/11/2022
	Implemented parity values (similar to modular values for mod 3) to ease implementation of parity based clues
	Issue #16 - added support for count-the-odds lines
	Issue #12 - added support for Rossini cluing, including the negative constraint
	Issue #13 - added support for corner/edge clues
	Issue #15 - added support for outside clues
	Issue #14 - added support for corner max under the "quad max value" name
	Issue #10 - added support for quad max arrows
	Issue #8 - added support for median cages
	Note: thanks to the GAS setters at CtC Discord: clover, Philip and Sam for mining numerous Sudoku variants, which comprise most of this push

9/10/2022
	Fixed Issue #4
	Fixed Issue #1 - added support for GSP
	Fixed Issue #5 - added support for multi-digit arrow sums
	Fixed Issue #6 - added support for genetics ruleset
	Fixed Issue #7 - added support for friendly cells
	Implemented several bug fixes affecting the negative Battenburg constraint and little killer cages found during development

9/4/2022
	Added support for shift lines
	Added support for up-and-down lines (alternately increase/decrease)
	Added support for neighbor sums
	Added support for run-on Renban lines

9/3/2022
	Added support for unicorn digits (thanks for the inspiration, clover!)
	Updated Kropki constraints to allow different difference and ratio values for white/black dots, respectively
	Added support for zones (thanks again clover1) and look-and-say cages (thanks Derektionary!)

9/2/2022bis
	Added support for Samurai sudoku
	Greatly improved solution printing, abstracting it into its own method
	Fixed printing to include support for multi-digit numbers

9/2/2022
	Added support for counting solutions for Japanese Sum Sudoku
	
9/1/2022
	Added support for slow thermometers (thanks for the inspiration, Philip Newman!)
	Added support for doubling lines
	Added support for magic squares
	Added support for position sums
	Added support for Japanese sum sudoku, excluding countSolutions method.
	